--- a/rps.html
+++ b/rps.html
@@ -4,9 +4,17 @@
     <script type="text/javascript">
         function game()
         {
-            var  player= document.querySelectorAll('input[name="input1"]');
+            var  rbs= document.querySelectorAll('input[name="input1"]');
+            let player;
+            for (const rb of rbs) {
+                if (rb.checked) {
+                    player = rb.value;
+                    break;
+                }
+            }
             const a=["rock","paper","scissor"];
             computer_choice= a[Math.floor(Math.random()*3)];
+            console.log(computer_choice)
             if(!player){
                 alert("select your choice");
             }
